Minor Html, CSS Changes

--- a/index.html
+++ b/index.html
@@ -27,13 +27,7 @@
       </div>
     </div>
 
-    <div id="toggle_3d">
-      <label>
-        3D
-        <!-- <input type="checkbox" /> -->
-        <button id="toggleViewButton">Toggle</button>
-      </label>
-    </div>
+    <button id="toggleViewButton">Switch Viewer</button>
 
     <canvas id="canvas2d"></canvas>
     <canvas id="canvas3d"></canvas>
