Splitted code into differnt files

--- a/index.html
+++ b/index.html
@@ -37,5 +37,7 @@
       crossorigin="anonymous"
     ></script>
     <script type="module" src="canvas.js"></script>
+    <!-- <script type="module" src="js/main.js"></script> -->
+
   </body>
 </html>
