--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="options-cont">
-    <i class="fa-solid fa-xmark"></i>
+      <i class="fa-solid fa-xmark"></i>
     </div>
     <div class="tools-cont scale-tools">
       <!--here scale tools is just for animation purpose-->
@@ -28,6 +28,10 @@
     </div>
 
     <button id="toggleViewButton">Switch Viewer</button>
+    <button id="toggleWallOutlineButton">
+      <span>Wall Outline </span
+      ><input type="checkbox" id="wallOutlineCheckbox" />
+    </button>
 
     <canvas id="canvas2d"></canvas>
     <canvas id="canvas3d"></canvas>
@@ -36,6 +40,7 @@
       src="https://kit.fontawesome.com/e36f0c5a9b.js"
       crossorigin="anonymous"
     ></script>
+
     <script type="module" src="canvas.js"></script>
   </body>
 </html>
